# telomeric-identifier

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt  test2.txt  test_telomeric_repeat_windows.tsv
clades/: README.md  build_clades.py  clades.txt  curated.csv  temp.rs  update_clades.bash
explore/: telomeric_locations.csv
finder/: tidk-findtelomeric_repeat_windows.csv
src/: build.rs  clades.rs  explore.rs  finder.rs  lib.rs  main.rs  min.rs  patterns.rs  plot.rs  search.rs  trim.rs  utils.rs
