[package]
name = "tidk"
version = "0.2.61"
authors = ["Max Brown <mb39@sanger.ac.uk>"]
edition = "2021"
license = "MIT"
description = "A toolkit for finding telomeric repeats in a genome."
homepage = "https://github.com/tolkit/telomeric-identifier"
repository = "https://github.com/tolkit/telomeric-identifier"
documentation = "https://github.com/tolkit/telomeric-identifier"
keywords = ["tidk", "telomere", "telomeric", "repeats", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.1.3", features = ["cargo", "string"] }
rayon = "1.10.0"
# in explore::get_telomeric_repeat_estimates()
itertools = "0.13.0"
# in utils::lms()
lexical-sort = "0.3.1"
# for plotting
csv = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
# clade table
tabled = "0.16.0"
chrono = "0.4.38"
# for errors
anyhow = "1.0.89"
bio = "2.0.3"
# for linux compilation
cmake = "=0.1.45"
# downloading and building the database
reqwest = {version = "0.12.7", features = ["blocking", "json"]}
dirs = "5.0.1"
base64 = "0.22.1"
