[package]
name = "tidk"
version = "0.2.7"
authors = ["Max Brown <mb39@sanger.ac.uk>"]
edition = "2021"
license = "MIT"
description = "A toolkit for finding telomeric repeats in a genome."
homepage = "https://github.com/tolkit/telomeric-identifier"
repository = "https://github.com/tolkit/telomeric-identifier"
documentation = "https://github.com/tolkit/telomeric-identifier"
keywords = ["tidk", "telomere", "telomeric", "repeats", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.1.3", features = ["cargo", "string"] }
rayon = "1.10.0"
# in explore::get_telomeric_repeat_estimates()
itertools = "0.13.0"
# in utils::lms()
lexical-sort = "0.3.1"
# for plotting
csv = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
# clade table
tabled = "0.16.0"
chrono = "0.4.38"
# for errors
anyhow = "1.0.89"
bio = "2.0.3"
# for linux compilation
cmake = "=0.1.45"
# downloading and building the database
reqwest = {version = "0.12.7", features = ["blocking", "json"]}
dirs = "5.0.1"
base64 = "0.22.1"
flate2 = "1.1.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
